# agsgd

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  game.m.cpp  travis-dependencies.sh
doc/: coding_standards.txt
src/: entity.cpp  entity.h
src/engine/containers/: dynamic_array.cpp  dynamic_array.h  map.h
src/engine/input/: input.cpp  input.h
src/engine/memory/: counting_allocator.cpp  counting_allocator.h  default_allocator.h  iallocator.h
src/engine/rendering/: renderable_sprite.cpp  renderable_sprite.h
src/engine/scene/: icollider.h  itickable.h  nxn_scene_graph.cpp  nxn_scene_graph.h  rectangle_bounds.cpp  rectangle_bounds.h
src/test/: dynamic_array_test.cpp  memory_test.cpp  test.cpp  test.h
